# codenames

./: .travis.yml  Makefile  README.md  TODO.md  codenames.cabal  stack.yaml
client/: Main.hs  stack.yaml
lib/: APIs.hs  Models.hs
lib/APIs/: Codename.hs  Game.hs  Lobby.hs  Types.hs
lib/Models/: Game.hs  Lobby.hs
server/: Classes.hs  Error.hs  Main.hs  Server.hs  stack.yaml
server/Logic/: Game.hs  Lobby.hs
src/: API.hs  Error.hs  Game.hs  GameModels.hs  GameOld.hs  Lobby.hs  Models.hs  Server.hs
