name:                codenames
version:             0.1.0.0
homepage:            https://github.com/querqueq/codenames#README.md
license:             BSD3
license-file:        LICENSE
author:              querqueq
copyright:           2017 querqueq
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable client
  main-is:             Main.hs
  if !impl(ghcjs)
    buildable:         False
  else 
    ghcjs-options:     -dedupe
    hs-source-dirs:    client, lib
    build-depends:       base >= 4.7 && < 5
                       , miso
                       , stm
                       , binary
                       , mtl
                       , servant
                       , aeson
                       , bytestring
                       , text
                       , containers
                       , transformers
    default-language:    Haskell2010


executable server
  main-is:             Main.hs
  if impl(ghcjs)
    buildable:         False
  else 
    --ghc-options:       -O2 -threaded -Wall -rtsopts
    hs-source-dirs:    server, lib
    build-depends:       base >= 4.7 && < 5
                       , stm
                       , binary
                       , MonadRandom
                       , random-shuffle
                       , mtl
                       , servant
                       , servant-server
                       , aeson
                       , bytestring
                       , text
                       , warp
                       , wai
                       , wai-extra
                       , wai-logger
                       , containers
                       , transformers
                       , hsparql
                       , ulid
    default-language:    Haskell2010


